--- a/OMH plugin/manifest.json
+++ b/OMH plugin/manifest.json
@@ -5,5 +5,7 @@
 	"minAppVersion": "0.15.0",
 	"description": "Commands: < Clean code: it extrapolates the variable declarations and bring them to the top of the selection (only for 'flowchart' and 'graph') > , < Regex for style: use regex in the place of the id to select nodes in a 'style' or 'class' clause >, < Create files: Create a list of file in the active folder based on lines of the selection >",
 	"author": "Francesco Di Cursi",
-	"isDesktopOnly": false
+	"isDesktopOnly": false,
+	"repo": "https://github.com/FrancescoDiCursi/Obsidian-Mermaid.js-Helper-OMH-plugin",
+	"branch":"main"
 }
