manifest id updated

--- a/OMH plugin/manifest.json
+++ b/OMH plugin/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "mermaid-obsidian",
+	"id": "obsidian-marmaid-helper",
 	"name": "Obsidian Mermaid.js Helper (OMH)",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
