--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,5 @@
 	"description": "helps in move to the top the variable delcariations, use regex in style and create files from a list of names",
 	"author": "Francesco Di Cursi",
 	"isDesktopOnly": false,
-	"repo": "https://github.com/FrancescoDiCursi/Mermaid.js-Helper-OMH-plugin",
-	"branch":"main"
+	"repo": "FrancescoDiCursi/Mermaid.js-Helper-OMH-plugin"
 }
