--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
-	"id": "marmaid-helper",
+	"id": "mermaid-helper",
 	"name": "Mermaid.js Helper (OMH)",
+	"version": "1.0.0",
+	"minAppVersion": "0.15.0",
 	"description": "plug in that helps in mermaid.js workflow and more",
 	"author": "Francesco Di Cursi",
 	"isDesktopOnly": false,
