Mermaid.js Helper #1632 fixed
All the corrections requested by joethei commented on Feb 22 have been made.

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
 	"minAppVersion": "0.15.0",
 	"description": "plug in that helps in mermaid.js workflow and more",
 	"author": "Francesco Di Cursi",
-	"isDesktopOnly": false,
-	"repo": "FrancescoDiCursi/Mermaid.js-Helper-OMH-plugin"
+	"isDesktopOnly": false
+
 }
